--- a/package.json
+++ b/package.json
@@ -25,6 +25,13 @@
   "engines": {
     "node": ">=8.11.4"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lightpohl/node-shell-batcher.git"
+  },
+  "files": [
+    "bin"
+  ],
   "author": "Joshua Pohl",
   "license": "MIT",
   "devDependencies": {
